# AndroidAudioCodec

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hqumath/nativedemo/: AudioRecordHelper.java  MainActivity.java
app/src/main/java/com/hqumath/nativedemo/media/: AudioPlayHelper.java  AudioRecordHelper.java
app/src/main/java/org/freedesktop/audiocodec/: AudioCodec.java
app/src/main/jni_audio_codec/: Android.mk  Application.mk  CMakeLists.txt  README.md  g723_16.c  g72x.h  main.c
app/src/main/jni_audio_codec/codec/: g72x.c
app/src/main/res/layout/: activity_main.xml
